deploy/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deep-work-station
  labels:
    name: deep-work-station
    app: deep-work-station
